--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
 <h1>Hello Everyone!</h1>
-<h2>Hello, {{name}}</h2>
+<h2>Hello, {{name}}  <br>  you are {{age}} years old</h2> 
+<h2>You are {{nationality}}</h2>
 <h3>How are you doing today? </h3>
