multiple url added and get operation form input textarea

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,3 +2,9 @@
 <h2>Hello, {{name}}  <br>  you are {{age}} years old</h2> 
 <h2>You are {{nationality}}</h2>
 <h3>How are you doing today? </h3>
+
+<h1>Input your text below</h1>
+<form method="" action="counter">
+    <textarea name="text" rows="15" cols="30"></textarea><br>
+    <input type="submit" >
+</form>
